Changed variable values to hex codes

--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
           regarding revenue, customer experience, and overall efficiency.
         </div>
         <div class="card__container__body-stats">
-          <div class="stats">10k+ companies</div>
-          <div class="stats"> 314 templates </div>
           <div class="stats">
-            12m+ queries</div>
+            10k+ <br />
+            companies
+          </div>
+          <div class="stats">
+            314 <br />
+            templates
+          </div>
+          <div class="stats">
+            12m+ <br />
+            queries
+          </div>
         </div>
       </div>
     </div>
