Added span to div and further styles added.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="card__container__body">
         <div class="card__container__body-lead">
-          <h1>Get insights that help your business grow.</h1>
+          <h1>Get <span>insights</span> that help your business grow.</h1>
         </div>
         <div class="card__container__body-text">
           Discover the benefits of data analytics and make better decisions
